--- a/resume.html
+++ b/resume.html
@@ -251,7 +251,7 @@
     <!-- Professional Summary -->
     <div class="resume-section">
       <h2 class="section-title"><i class="fas fa-user"></i> Professional Summary</h2>
-      <p>Results-driven Senior Product Manager with 8+ years of experience in SaaS platforms, AI technologies, and API ecosystem development. Proven track record of leading cross-functional teams to deliver innovative products that drive revenue growth and enhance user experience. Expert in product strategy, market analysis, and stakeholder management with deep understanding of enterprise software solutions.</p>
+      <p>Results-driven Senior Product Manager with 9+ years of experience in SaaS platforms, AI technologies, and API ecosystem development. Proven track record of leading cross-functional teams to deliver innovative products that drive revenue growth and enhance user experience. Expert in product strategy, market analysis, and stakeholder management with deep understanding of enterprise software solutions.</p>
     </div>
 
     <!-- Experience -->
@@ -260,11 +260,15 @@
       
       <div class="experience-item">
         <div class="job-title">Senior Product Manager</div>
-        <div class="company">TechCorp Solutions</div>
-        <div class="duration">January 2021 - Present</div>
+        <div class="company">Egnyte</div>
+        <div class="duration">July 2024 - Present</div>
         <ul class="responsibilities">
-          <li>Led product strategy and roadmap for SaaS platform serving 50,000+ enterprise users</li>
-          <li>Managed $2M product budget and delivered 15+ major feature releases</li>
+           <li>Led development and launch of 10+ partner integrations (DocuSign, Bluebeam, ServiceNow, Splunk, Sumologic, AdobeSign, signNOw, Jira, Google Co-Editing,Agent-to-Agent, Egnyte MCP, Egnyte Webhooks), enabling real-time data sync and contributing over $50M in revenue.</li>
+          <li>Driving Egnyte Developer Portal revamp with an AI-powered backend to streamline integration and reduce setup time by 40%.</li>
+            <li>Supported 25+ custom integration projects using Egnyte APIs, webhooks, and connectors to meet diverse customer needs.</li>
+            <li>Delivered AI-assisted workflows for document processing and classification,improving operational efficiency by 30%.</li>
+          <li>Led product strategy and roadmap for SaaS platform serving 10,000+ enterprise users</li>
+      
           <li>Collaborated with engineering, design, and sales teams to implement AI-powered automation features</li>
           <li>Increased user engagement by 35% through data-driven product improvements</li>
           <li>Established API partner ecosystem resulting in 25% revenue growth</li>
