--- a/resume.html
+++ b/resume.html
@@ -261,7 +261,7 @@
       <div class="experience-item">
         <div class="job-title">Senior Product Manager</div>
         <div class="company">Egnyte</div>
-        <div class="duration">July 2024 - Present</div>
+        <div class="duration">2024 - Present</div>
         <ul class="responsibilities">
            <li>Led development and launch of 10+ partner integrations (DocuSign, Bluebeam, ServiceNow, Splunk, Sumologic, AdobeSign, signNOw, Jira, Google Co-Editing,Agent-to-Agent, Egnyte MCP, Egnyte Webhooks), enabling real-time data sync and contributing over $50M in revenue.</li>
           <li>Driving Egnyte Developer Portal revamp with an AI-powered backend to streamline integration and reduce setup time by 40%.</li>
@@ -276,22 +276,26 @@
       </div>
 
       <div class="experience-item">
-        <div class="job-title">Product Manager</div>
-        <div class="company">Innovation Labs Inc.</div>
-        <div class="duration">March 2019 - December 2020</div>
+        <div class="job-title">Associate Product Manager</div>
+        <div class="company">Sprinklr</div>
+        <div class="duration">2018 - 2024</div>
         <ul class="responsibilities">
+          <li>Managed concept-to-launch of Omni-Channel Handover Protocol APIs and UI. Enabling real-time chat transfer between bot and agent on 30+ social and messaging channels. It has generated $25M+ since its inception. Integrated with chatbot vendors like Haptik, Netomi, Cognigy.AI, Roe, Arabot, SKY-Bot, IV.AI, etc.</li>
+          <li>Worked on 300+ Custom, API and Platform Integrations. Which includes companies from different sectors like Mobile, Airlines, Pharmaceuticals, Food, Oil and Gas, Entertainment, Telecommunications, Tourism, AI Content, DTH etc.</li>
+          <li>Leading Omni Channel Chatbot, CRM, and Custom integration projects by leveraging and creating APIs, Webhooks and Connectors.</li>
+          <li>Increased API consumption by 100 %, by analysing the support tickets month and by developing 50+ new API endpoints. Built a platform feature for API consumption analysis for Success Team that led to 1M additional API revenue.</li>
+          <li>Complete ownership of Sprinklr developer portal w.r.t Portal Management, API Documentation, Video & API Tutorials.</li>
           <li>Managed end-to-end product lifecycle for B2B software solutions</li>
           <li>Conducted market research and competitive analysis for new product initiatives</li>
           <li>Worked closely with UX/UI teams to optimize user experience and reduce churn by 20%</li>
           <li>Implemented agile methodologies and improved development velocity by 40%</li>
-          <li>Successfully launched 3 major product features ahead of schedule</li>
         </ul>
       </div>
 
       <div class="experience-item">
-        <div class="job-title">Associate Product Manager</div>
-        <div class="company">StartupXYZ</div>
-        <div class="duration">June 2017 - February 2019</div>
+        <div class="job-title">Senior Associate (Bixby AI Linguist) </div>
+        <div class="company">Samsung R&D, Bengaluru</div>
+        <div class="duration">2017 - 2018</div>
         <ul class="responsibilities">
           <li>Assisted in product strategy development for early-stage SaaS startup</li>
           <li>Analyzed user feedback and market trends to identify product opportunities</li>
