--- a/resume.html
+++ b/resume.html
@@ -312,16 +312,12 @@
       
       <div class="education-item">
         <div class="job-title">Master of Business Administration (MBA)</div>
-        <div class="company">Indian Institute of Management (IIM)</div>
-        <div class="duration">2015 - 2017</div>
-        <p>Specialization in Product Management and Strategy</p>
+        <p>Specialization in Product Management and Marketing</p>
       </div>
 
       <div class="education-item">
         <div class="job-title">Bachelor of Technology (B.Tech)</div>
-        <div class="company">Indian Institute of Technology (IIT)</div>
-        <div class="duration">2011 - 2015</div>
-        <p>Computer Science and Engineering</p>
+        <p>Electronics and Communication Engineering</p>
       </div>
     </div>
 
