--- a/resume.html
+++ b/resume.html
@@ -372,7 +372,7 @@
       </div>
     </div>
 
-    <!-- Certifications -->
+    <!-- Certifications 
     <div class="resume-section">
       <h2 class="section-title"><i class="fas fa-certificate"></i> Certifications</h2>
       <div class="skill-tags">
@@ -382,7 +382,7 @@
         <span class="skill-tag">Product Management Certificate - Stanford</span>
       </div>
     </div>
-
+-->
     <!-- Key Achievements -->
     <div class="resume-section">
       <h2 class="section-title"><i class="fas fa-trophy"></i> Key Achievements</h2>
