--- a/resume.html
+++ b/resume.html
@@ -388,11 +388,13 @@
       <h2 class="section-title"><i class="fas fa-trophy"></i> Key Achievements</h2>
       <ul class="responsibilities">
         <li>Increased product adoption rate by 45% through strategic feature development and user experience optimization</li>
-        <li>Successfully managed product portfolio worth $5M+ in annual recurring revenue</li>
-        <li>Led cross-functional team of 20+ members across engineering, design, and marketing</li>
+        <li>Built and launched 10+ strategic partner integrations, driving $50M+ in revenue and enabling real-time data sync across platforms like DocuSign, ServiceNow, and Splunk.</li>
+        <li>Led Egnyte Developer Portal revamp with an AI-powered backend, cutting integration setup time by 40%.</li>
         <li>Implemented data-driven decision making processes that reduced product development time by 30%</li>
-        <li>Built and scaled API ecosystem that now supports 100+ third-party integrations</li>
-        <li>Recognized as "Product Manager of the Year" at TechCorp Solutions (2022)</li>
+        <li>Built and scaled API ecosystem that now supports 350+ third-party integrations</li>
+        <li>Delivered AI-driven document workflows, improving operational efficiency by 30%.</li>
+        <li>Launched Omni-Channel Handover APIs powering bot-to-agent transfers on 30+ channels, generating $25M+ revenue.</li>
+        <li>Owned Sprinklr Developer Portals to enhance API discoverability and developer experience.</li>
       </ul>
     </div>
 
