--- a/resume.html
+++ b/resume.html
@@ -366,7 +366,9 @@
             <span class="skill-tag">Design Thinking</span>
             <span class="skill-tag">Lean Startup</span>
             <span class="skill-tag">A/B Testing</span>
-            <span class="skill-tag">OKRs</span>
+            <span class="skill-tag">OKR & KPI-Driven Planning</span>
+             <span class="skill-tag">Stakeholder & Partner Management</span>
+             <span class="skill-tag">Data-Driven Decision Making</span>
           </div>
         </div>
       </div>
