--- a/resume.html
+++ b/resume.html
@@ -297,11 +297,21 @@
         <div class="company">Samsung R&D, Bengaluru</div>
         <div class="duration">2017 - 2018</div>
         <ul class="responsibilities">
-          <li>Assisted in product strategy development for early-stage SaaS startup</li>
-          <li>Analyzed user feedback and market trends to identify product opportunities</li>
-          <li>Coordinated with development teams to prioritize feature development</li>
-          <li>Created detailed product specifications and user stories</li>
-          <li>Supported go-to-market strategies for new feature launches</li>
+          <li>Worked on Samsung Bixby AI technology as a linguist.Provided tool support for other writers in divisions across the company</li>
+          <li>Participated in a team to develop company-wide best practices for producing Bixby Utterance references.</li>
+          <li>Led a team of 5 writers to produce high-quality developer documentation.</li>
+          <li>Worked closely with developers, QA staff, and the Product Marketing Department.</li>
+        </ul>
+      </div>
+    </div>
+
+     <div class="experience-item">
+        <div class="job-title">Senior Technical Writer </div>
+        <div class="company">Ornico Technologies Pvt. Ltd.</div>
+        <div class="duration">2014 - 2017</div>
+        <ul class="responsibilities">
+          <li>Written Software Product documentation and Reference guides for users on dynamic projects.</li>
+          <li>Provided feedback on Documentation design, and filed error reports for existing documentation.</li>
         </ul>
       </div>
     </div>
