--- a/index.html
+++ b/index.html
@@ -331,8 +331,10 @@
 
     <div class="cta-buttons">
       <a href="resume.html"><i class="fas fa-file-alt"></i> View Resume</a>
-      <a href="#downloads" class="secondary-btn"><i class="fas fa-download"></i> Download CV</a>
+      <a href="docs/sumit_kaushik.pdf" class="secondary-btn" download><i class="fas fa-download"></i> Download CV</a>
       <a href="mailto:sumitkaushik@outlook.com" class="secondary-btn"><i class="fas fa-envelope"></i> Contact</a>
+      <a href="tel:+919876543210" class="secondary-btn"> <i class="fas fa-phone"></i> Call
+      </a>
     </div>
 
     <div class="profile-image">
@@ -342,14 +344,14 @@
 
   <section id="downloads" class="section-bg">
     <h2 class="section-title">Professional Documents</h2>
-    <p class="section-description">Access my resume, certifications, and portfolio—showcasing 5+ years of product management excellence.</p>
+    <p class="section-description">Access my resume, certifications, and portfolio—showcasing 9+ years of product management excellence.</p>
 
     <div class="download-grid">
       <div class="download-card">
         <i class="fas fa-file-pdf"></i>
         <h3>Complete Resume</h3>
         <p>Comprehensive summary of experience, skills, and impact.</p>
-        <a href="sumit_kaushik.pdf" class="cta-buttons"><i class="fas fa-download"></i> Download</a>
+        <a href="docs/sumit_kaushik.pdf" class="cta-buttons" download><i class="fas fa-download"></i> Download</a>
       </div>
 
       <div class="download-card">
