--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
     <div class="cta-buttons">
       <a href="resume.html"><i class="fas fa-file-alt"></i> View Resume</a>
-      <a href="docs/sumit_kaushik.pdf" class="secondary-btn" download><i class="fas fa-download"></i> Download CV</a>
+      <a href="docs/sumit_kaushik_spm.pdf" class="secondary-btn" download><i class="fas fa-download"></i> Download CV</a>
       <a href="mailto:sumitkaushik@outlook.com" class="secondary-btn"><i class="fas fa-envelope"></i> Contact</a>
       <a href="tel:+919876543210" class="secondary-btn"> <i class="fas fa-phone"></i> Call
       </a>
@@ -351,7 +351,7 @@
         <i class="fas fa-file-pdf"></i>
         <h3>Complete Resume</h3>
         <p>Comprehensive summary of experience, skills, and impact.</p>
-        <a href="docs/sumit_kaushik.pdf" class="cta-buttons" download><i class="fas fa-download"></i> Download</a>
+        <a href="docs/sumit_kaushik_spm.pdf" class="cta-buttons" download><i class="fas fa-download"></i> Download</a>
       </div>
 
       <div class="download-card">
