--- a/index.html
+++ b/index.html
@@ -307,6 +307,106 @@
         font-size: 1.1rem;
       }
     }
+     /* ===== Responsive nav ===== */
+    .banner-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 20px;
+  background: #f8fafc;
+}
+
+.banner-content {
+  text-align: center;
+  max-width: 900px;
+}
+
+.profile-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 15px;
+}
+
+.profile-header h1 {
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: #1a1a1a;
+}
+
+.profile-img {
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #fff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.tagline {
+  font-size: 1.2rem;
+  color: #555;
+  margin-bottom: 30px;
+}
+
+.cta-buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+.primary-btn,
+.secondary-btn {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  padding: 10px 20px;
+  border-radius: 30px;
+  font-weight: 500;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.primary-btn {
+  background: linear-gradient(90deg, #1a73e8, #0071ff);
+  color: #fff;
+  box-shadow: 0 4px 10px rgba(0, 113, 255, 0.3);
+}
+
+.primary-btn:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 15px rgba(0, 113, 255, 0.4);
+}
+
+.secondary-btn {
+  border: 2px solid #0071ff;
+  color: #0071ff;
+  background: #fff;
+}
+
+.secondary-btn:hover {
+  background: #0071ff;
+  color: #fff;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .profile-header {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .profile-header h1 {
+    font-size: 2.2rem;
+  }
+
+  .cta-buttons {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
   </style>
 </head>
 
@@ -325,20 +425,23 @@
     </nav>
   </header>
 
-  <section class="banner-area">
-    <h1>Sumit Kaushik</h1>
-    <p class="tagline">Senior Product Manager | AI-Powered Innovation | Enterprise SaaS </p>
-
-    <div class="cta-buttons">
-      <a href="resume.html"><i class="fas fa-file-alt"></i> View Resume</a>
-      <a href="docs/sumit_kaushik_spm.pdf" class="secondary-btn" download><i class="fas fa-download"></i> Download CV</a>
-      <a href="mailto:sumitkaushik@outlook.com" class="secondary-btn"><i class="fas fa-envelope"></i> Contact</a>
-      <a href="tel:+919876543210" class="secondary-btn"> <i class="fas fa-phone"></i> Call
-      </a>
-    </div>
-
-    <div class="profile-image">
-      <img src="img/professional-headshot.jpg" alt="Sumit Kaushik Profile" onerror="this.style.display='none'">
+ <section class="banner-area">
+    <div class="banner-content">
+      <div class="profile-header">
+        <img src="img/sumit.png" alt="Sumit Kaushik" class="profile-img">
+        <h1>Sumit Kaushik</h1>
+      </div>
+  
+      <p class="tagline">
+        Senior Product Manager | AI-Powered Innovation | Enterprise SaaS
+      </p>
+  
+      <div class="cta-buttons">
+        <a href="resume.html" class="primary-btn"><i class="fas fa-file-alt"></i> View Resume</a>
+        <a href="docs/SUMIT KAUSHIIK (SPM).pdf" class="secondary-btn" download><i class="fas fa-download"></i> Download CV</a>
+        <a href="mailto:sumitkaushik@outlook.com" class="secondary-btn"><i class="fas fa-envelope"></i> Contact</a>
+        <a href="tel:+919876543210" class="secondary-btn"><i class="fas fa-phone"></i> Call</a>
+      </div>
     </div>
   </section>
 
