--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
     </div>
   </section>
 
-  <section id="projects" class="section-bg">
+ <section id="projects" class="section-bg">
     <h2 class="section-title">Featured Projects</h2>
     <p class="section-description">Strategic initiatives that drove measurable impact through innovation, integration, and user-centered design.</p>
 
@@ -483,19 +483,115 @@
         <h3>Egnyte × ServiceNow</h3>
         <p>Seamless incident sync improving visibility and SLA tracking for enterprise users.</p>
       </div>
+      <div class="project-card">
+        <div class="project-icon">🤖</div>
+        <h3>Agent-to-Agent Framework</h3>
+        <p>Architected a scalable AI agent communication layer to power cross-service intelligence and automation.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">☁️</div>
+        <h3>Egnyte MCP (Multi-Cloud Platform)</h3>
+        <p>Unified partner integrations under a single governance layer, enabling scalable, modular deployment.</p>
+      </div>
 
       <div class="project-card">
         <div class="project-icon">📊</div>
         <h3>AI Data Insights Dashboard</h3>
         <p>Enabled predictive insights via AI models, enhancing decision-making speed by 60%.</p>
       </div>
-
       <div class="project-card">
-        <div class="project-icon">🚀</div>
-        <h3>Bluebeam API Modernization</h3>
-        <p>Migration to new APIs reducing costs and improving reliability for AEC clients.</p>
+        <div class="project-icon">🖋️</div>
+        <h3>DocuSign Integration</h3>
+        <p>Streamlined eSignature workflows with secure file exchange, driving faster deal closures and compliance efficiency.</p>
       </div>
-    </div>
+  
+      <div class="project-card">
+        <div class="project-icon">🏗️</div>
+        <h3>Bluebeam Integration</h3>
+        <p>Enabled seamless document markup and version collaboration for AEC users, bridging field and office workflows.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">📊</div>
+        <h3>Splunk Integration</h3>
+        <p>Delivered real-time content activity visibility through secure log streaming, empowering proactive threat monitoring.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">📈</div>
+        <h3>Sumo Logic Integration</h3>
+        <p>Unified Egnyte data governance signals with observability tools for deeper analytics and operational intelligence.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">✒️</div>
+        <h3>Adobe Sign Integration</h3>
+        <p>Extended Egnyte’s secure content lifecycle into Adobe’s signing ecosystem for consistent document governance.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">✅</div>
+        <h3>signNow Integration</h3>
+        <p>Enhanced mid-market signing efficiency with lightweight, secure eSignature workflows integrated into Egnyte.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">📋</div>
+        <h3>Jira Integration</h3>
+        <p>Bridged engineering and content collaboration by linking Egnyte files with Jira issues for traceability and faster resolution.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">🧑‍💻</div>
+        <h3>Google Co-Editing</h3>
+        <p>Introduced real-time co-authoring for Docs, Sheets, and Slides within Egnyte, boosting productivity and adoption.</p>
+      </div>
+  
+     
+  
+      <div class="project-card">
+        <div class="project-icon">🔔</div>
+        <h3>Egnyte Webhooks</h3>
+        <p>Enabled event-driven automation and third-party ecosystem connectivity through real-time content notifications.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">💬</div>
+        <h3>Omni-Channel Handover Protocol</h3>
+        <p>Designed a seamless handoff layer across chat, social, and CRM platforms, ensuring context-rich customer journeys.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">🌐</div>
+        <h3>350+ Custom Integrations</h3>
+        <p>Built a unified ecosystem enabling customers to extend Sprinklr data into their enterprise stack with agility.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">🧭</div>
+        <h3>Sprinklr Developer Portal</h3>
+        <p>Empowered developers and partners to innovate through an open, API-driven developer experience.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">🔗</div>
+        <h3>APIs</h3>
+        <p>Established a scalable API ecosystem enabling developers and partners to build secure, high-performance extensions.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">⚡</div>
+        <h3>Webhooks</h3>
+        <p>Powered real-time automation and ecosystem orchestration by enabling event-driven data flows across systems.</p>
+      </div>
+  
+      <div class="project-card">
+        <div class="project-icon">🧩</div>
+        <h3>Connectors</h3>
+        <p>Expanded interoperability with SaaS, DMS, and productivity platforms through modular, plug-and-play connectors.</p>
+      </div>
+      
   </section>
 
   <footer>
