--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         <li><a href="resume.html">Resume</a></li>
         <li><a href="#downloads">Resources</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -439,7 +439,7 @@
       <div class="cta-buttons">
         <a href="resume.html" class="primary-btn"><i class="fas fa-file-alt"></i> View Resume</a>
         <a href="docs/SUMIT KAUSHIIK (SPM).pdf" class="secondary-btn" download><i class="fas fa-download"></i> Download CV</a>
-        <a href="mailto:sumitkaushik@outlook.com" class="secondary-btn"><i class="fas fa-envelope"></i> Contact</a>
+        <a href="mailto:sumeetkaushiik@gmail.com" class="secondary-btn"><i class="fas fa-envelope"></i> Contact</a>
         <a href="tel:+919876543210" class="secondary-btn"><i class="fas fa-phone"></i> Call</a>
       </div>
     </div>
