--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,119 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact | Sumit Kaushik</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f7f8fa;
+      color: #222;
+      margin: 0;
+      padding: 0;
+    }
 
+    .contact-container {
+      max-width: 700px;
+      margin: 80px auto;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+      padding: 40px 50px;
+      position: relative;
+    }
+
+    .back-link {
+      display: inline-flex;
+      align-items: center;
+      text-decoration: none;
+      color: #0077b5;
+      font-size: 16px;
+      font-weight: 500;
+      margin-bottom: 20px;
+      transition: color 0.3s ease;
+    }
+
+    .back-link i {
+      margin-right: 8px;
+    }
+
+    .back-link:hover {
+      color: #005582;
+    }
+
+    h1 {
+      text-align: center;
+      color: #222;
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    .contact-line {
+      text-align: center;
+      color: #666;
+      font-size: 16px;
+      margin-bottom: 30px;
+    }
+
+    .contact-item {
+      display: flex;
+      align-items: center;
+      padding: 15px 0;
+      border-bottom: 1px solid #eee;
+    }
+
+    .contact-item i {
+      color: #0077b5;
+      font-size: 24px;
+      width: 35px;
+    }
+
+    .contact-item a {
+      color: #0077b5;
+      text-decoration: none;
+      font-size: 18px;
+      margin-left: 10px;
+      word-break: break-all;
+    }
+
+    .contact-item a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      .contact-container {
+        margin: 40px 20px;
+        padding: 30px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="contact-container">
+    <a href="index.html" class="back-link"><i class="fas fa-arrow-left"></i> Back to Portfolio</a>
+
+    <h1>Contact Me</h1>
+    <p class="contact-line">Let's connect and build something amazing together.</p>
+
+    <div class="contact-item">
+      <i class="fab fa-linkedin"></i>
+      <a href="https://www.linkedin.com/in/sumit-kaushik-307273190/" target="_blank">linkedin.com/in/sumitkaushik07</a>
+    </div>
+
+    <div class="contact-item">
+      <i class="fas fa-envelope"></i>
+      <a href="mailto:sumeetkaushiik@gmail.com">sumeetkaushiik@gmail.com</a>
+    </div>
+
+    <div class="contact-item">
+      <i class="fas fa-phone"></i>
+      <a href="tel:+919876543210">+91-7974027750</a>
+    </div>
+  </div>
+
+</body>
+</html>
