--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
       </div>
   
       <p class="tagline">
-        Senior Product Manager | AI-Powered Innovation | Enterprise SaaS
+        Senior Product Manager | SaaS & AI Platforms | API & Partner Ecosystem Strategist | Driving Growth & Innovation at Egnyte | Ex-Sprinklr | Ex-Samsung
       </p>
   
       <div class="cta-buttons">
