--- a/index.html
+++ b/index.html
@@ -596,9 +596,9 @@
 
   <footer>
     <div class="footer-social">
-      <a href="#"><i class="fab fa-linkedin-in"></i></a>
-      <a href="#"><i class="fab fa-github"></i></a>
-      <a href="mailto:sumitkaushik@outlook.com"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/sumit-kaushik-307273190/"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://github.com/Sumeetkaushiik"><i class="fab fa-github"></i></a>
+      <a href="mailto:sumeetkaushiik@gmail.com"><i class="fas fa-envelope"></i></a>
     </div>
     <p>© 2025 Sumit Kaushik. All rights reserved.</p>
   </footer>
