--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
   
       <div class="cta-buttons">
         <a href="resume.html" class="primary-btn"><i class="fas fa-file-alt"></i> View Resume</a>
-        <a href="docs/SUMIT KAUSHIIK (SPM).pdf" class="secondary-btn" download><i class="fas fa-download"></i> Download CV</a>
+        <a href="docs/sumit_kaushik_spm.pdf" class="secondary-btn" download><i class="fas fa-download"></i> Download CV</a>
         <a href="mailto:sumeetkaushiik@gmail.com" class="secondary-btn"><i class="fas fa-envelope"></i> Contact</a>
         <a href="tel:+919876543210" class="secondary-btn"><i class="fas fa-phone"></i> Call</a>
       </div>
