--- a/Certifications.html
+++ b/Certifications.html
@@ -1,1 +1,118 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Certifications PDFs Gallery</title>
+  <style>
+    :root{
+      --bg:#fbfcfd;
+      --card:#ffffff;
+      --muted:#f3f5f6;
+      --text:#111827;
+      --shadow:0 8px 20px rgba(16,24,40,0.06);
+      --radius:12px;
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+    }
+    html,body{height:100%;margin:0;background:var(--bg);color:var(--text)}
+    .wrap{max-width:1100px;margin:36px auto;padding:28px;background:linear-gradient(180deg, rgba(255,255,255,0.7), rgba(250,250,250,0.9));border-radius:16px;box-shadow:var(--shadow)}
+    header{display:flex;align-items:center;gap:16px;margin-bottom:18px}
+    .logo{width:56px;height:56px;border-radius:10px;background:var(--muted);display:flex;align-items:center;justify-content:center;font-weight:700;color:var(--text)}
+    h1{font-size:20px;margin:0}
+    p.lead{margin:6px 0 0;color:#475569;font-size:13px}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px;margin-top:22px}
+    .card{background:var(--card);border-radius:var(--radius);padding:12px;display:flex;flex-direction:column;align-items:center;gap:10px;box-shadow:0 6px 18px rgba(15,23,42,0.04);transition:transform .18s ease, box-shadow .18s ease;}
+    .card:focus-within, .card:hover{transform:translateY(-6px);box-shadow:0 14px 36px rgba(15,23,42,0.07)}
+    .thumb{width:100%;height:180px;background:var(--muted);border-radius:10px;display:flex;align-items:center;justify-content:center;overflow:hidden;cursor:pointer;position:relative}
+    .thumb img{width:250px;height:204px;opacity:2.0}
+    .caption{width:100%;display:flex;justify-content:space-between;align-items:center;font-size:13px;color:#334155}
+    .caption .title{font-weight:600}
+    .small{font-size:12px;color:#64748b}
+    .lightbox{position:fixed;inset:0;background:rgba(2,6,23,0.6);display:none;align-items:center;justify-content:center;padding:28px;z-index:1000}
+    .lightbox.open{display:flex}
+    iframe{width:90vw;height:90vh;border:none;border-radius:10px;box-shadow:0 24px 60px rgba(2,6,23,0.6);background:var(--card)}
+    .close-btn{position:fixed;right:28px;top:28px;background:var(--card);border-radius:10px;padding:8px 10px;box-shadow:var(--shadow);cursor:pointer}
+    footer{margin-top:20px;text-align:center;color:#6b7280;font-size:13px}
+  </style>
+</head>
+<body>
+  <main class="wrap">
+    <header>
+      <div class="logo">PDF</div>
+      <div>
+        <h1>Certification PDFs</h1>
+        <p class="lead">A clean gallery to view PDF certifications. Click any tile to open the PDF.</p>
+      </div>
+    </header>
 
+    <section class="grid">
+      <article class="card">
+        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Generative AI for Product Managers.pdf" aria-label="View Certification: Generative AI for Product Managers">
+          <img src="docs/1.png" alt="LinkedIn Thumbnail">
+        </button>
+        <div class="caption"><div class="title">Generative AI for Product Managers</div><div class="small">2025</div></div>
+      </article>
+
+      <article class="card">
+        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Model Context Protocol MCP HandsOn with Agentic AI.pdf" aria-label="View Certification: MCP Hands-On with Agentic AI">
+          <img src="docs/2.png" alt="LinkedIn Thumbnail">
+        </button>
+        <div class="caption"><div class="title">MCP Hands-On with Agentic AI</div><div class="small">2025</div></div>
+      </article>
+
+      <article class="card">
+        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Vibe Code Your First AI App with Lovable and n8n No Code Required.pdf" aria-label="View Certification: Code Your First AI App">
+          <img src="docs/3.png" alt="LinkedIn Thumbnail">
+        </button>
+        <div class="caption"><div class="title">Code Your First AI App</div><div class="small">2025</div></div>
+      </article>
+
+      <article class="card">
+        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Vibe Coding with ChatGPT Build Your Own AI Assistant No Code Required.pdf" aria-label="View Certification: Build Your Own AI Assistant">
+          <img src="docs/4.png" alt="LinkedIn Thumbnail">
+        </button>
+        <div class="caption"><div class="title">Build Your Own AI Assistant</div><div class="small">2025</div></div>
+      </article>
+    </section>
+
+    <footer>
+      Place your certification PDFs in a <code>pdfs/</code> folder and the LinkedIn logo in <code>images/linkedin.png</code>.
+    </footer>
+
+    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true" aria-hidden="true">
+      <button id="close" class="close-btn" aria-label="Close viewer">Close</button>
+      <iframe id="pdf-frame" title="Certification PDF Viewer"></iframe>
+    </div>
+  </main>
+
+  <script>
+    (function(){
+      const lightbox = document.getElementById('lightbox');
+      const pdfFrame = document.getElementById('pdf-frame');
+      const closeBtn = document.getElementById('close');
+      const thumbs = document.querySelectorAll('.thumb');
+
+      function openPDF(src){
+        pdfFrame.src = src;
+        lightbox.classList.add('open');
+        lightbox.setAttribute('aria-hidden','false');
+        closeBtn.focus();
+      }
+      function closePDF(){
+        lightbox.classList.remove('open');
+        lightbox.setAttribute('aria-hidden','true');
+        pdfFrame.src = '';
+      }
+
+      thumbs.forEach(btn=>{
+        btn.addEventListener('click',()=>openPDF(btn.getAttribute('data-pdf')));
+        btn.addEventListener('keydown',e=>{if(e.key==='Enter'||e.key===' '){e.preventDefault();btn.click();}});
+      });
+
+      closeBtn.addEventListener('click',closePDF);
+      lightbox.addEventListener('click',e=>{if(e.target===lightbox)closePDF();});
+      document.addEventListener('keydown',e=>{if(e.key==='Escape')closePDF();});
+    })();
+  </script>
+</body>
+</html>
