--- a/Certifications.html
+++ b/Certifications.html
@@ -36,6 +36,88 @@
     iframe{width:90vw;height:90vh;border:none;border-radius:10px;box-shadow:0 24px 60px rgba(2,6,23,0.6);background:var(--card)}
     .close-btn{position:fixed;right:28px;top:28px;background:var(--card);border-radius:10px;padding:8px 10px;box-shadow:var(--shadow);cursor:pointer}
     footer{margin-top:20px;text-align:center;color:#6b7280;font-size:13px}
+    {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f7f8fa;
+      color: #222;
+      margin: 0;
+      padding: 0;
+    }
+
+    .contact-container {
+      max-width: 700px;
+      margin: 80px auto;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+      padding: 40px 50px;
+      position: relative;
+    }
+
+    .back-link {
+      display: inline-flex;
+      align-items: center;
+      text-decoration: none;
+      color: #0077b5;
+      font-size: 16px;
+      font-weight: 500;
+      margin-bottom: 20px;
+      transition: color 0.3s ease;
+    }
+
+    .back-link i {
+      margin-right: 8px;
+    }
+
+    .back-link:hover {
+      color: #005582;
+    }
+
+    h1 {
+      text-align: center;
+      color: #222;
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    .contact-line {
+      text-align: center;
+      color: #666;
+      font-size: 16px;
+      margin-bottom: 30px;
+    }
+
+    .contact-item {
+      display: flex;
+      align-items: center;
+      padding: 15px 0;
+      border-bottom: 1px solid #eee;
+    }
+
+    .contact-item i {
+      color: #0077b5;
+      font-size: 24px;
+      width: 35px;
+    }
+
+    .contact-item a {
+      color: #0077b5;
+      text-decoration: none;
+      font-size: 18px;
+      margin-left: 10px;
+      word-break: break-all;
+    }
+
+    .contact-item a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      .contact-container {
+        margin: 40px 20px;
+        padding: 30px;
+      }
+    }
   </style>
 </head>
 <body>
