--- a/Certifications.html
+++ b/Certifications.html
@@ -5,156 +5,250 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Certifications PDFs Gallery</title>
   <style>
-    :root{
-      --bg:#fbfcfd;
-      --card:#ffffff;
-      --muted:#f3f5f6;
-      --text:#111827;
-      --shadow:0 8px 20px rgba(16,24,40,0.06);
-      --radius:12px;
+    :root {
+      --bg: #fbfcfd;
+      --card: #ffffff;
+      --muted: #f3f5f6;
+      --text: #111827;
+      --shadow: 0 8px 20px rgba(16,24,40,0.06);
+      --radius: 12px;
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
-   
-    html,body{height:100%;margin:0;background:var(--bg);color:var(--text)}
-    .wrap{max-width:1100px;margin:36px auto;padding:28px;background:linear-gradient(180deg, rgba(255,255,255,0.7), rgba(250,250,250,0.9));border-radius:16px;box-shadow:var(--shadow)}
-    header{display:flex;align-items:center;gap:16px;margin-bottom:18px}
-    .logo{width:56px;height:56px;border-radius:10px;background:var(--muted);display:flex;align-items:center;justify-content:center;font-weight:700;color:var(--text)}
-    h1{font-size:20px;margin:0}
-    p.lead{margin:6px 0 0;color:#475569;font-size:13px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px;margin-top:22px}
-    .card{background:var(--card);border-radius:var(--radius);padding:12px;display:flex;flex-direction:column;align-items:center;gap:10px;box-shadow:0 6px 18px rgba(15,23,42,0.04);transition:transform .18s ease, box-shadow .18s ease;}
-    .card:focus-within, .card:hover{transform:translateY(-6px);box-shadow:0 14px 36px rgba(15,23,42,0.07)}
-    .thumb{width:100%;height:180px;background:var(--muted);border-radius:10px;display:flex;align-items:center;justify-content:center;overflow:hidden;cursor:pointer;position:relative}
-    .thumb img{width:250px;height:204px;opacity:2.0}
-    .caption{width:100%;display:flex;justify-content:space-between;align-items:center;font-size:13px;color:#334155}
-    .caption .title{font-weight:600}
-    .small{font-size:12px;color:#64748b}
-    .lightbox{position:fixed;inset:0;background:rgba(2,6,23,0.6);display:none;align-items:center;justify-content:center;padding:28px;z-index:1000}
-    .lightbox.open{display:flex}
-    iframe{width:90vw;height:90vh;border:none;border-radius:10px;box-shadow:0 24px 60px rgba(2,6,23,0.6);background:var(--card)}
-    .close-btn{position:fixed;right:28px;top:28px;background:var(--card);border-radius:10px;padding:8px 10px;box-shadow:var(--shadow);cursor:pointer}
-    footer{margin-top:20px;text-align:center;color:#6b7280;font-size:13px}
-    {
-      font-family: 'Poppins', sans-serif;
-      background-color: #f7f8fa;
-      color: #222;
+
+    html, body {
+      height: 100%;
       margin: 0;
-      padding: 0;
+      background: var(--bg);
+      color: var(--text);
     }
 
-    .contact-container {
-      max-width: 700px;
-      margin: 80px auto;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
-      padding: 40px 50px;
+    /* Back button outside and aligned left */
+    .back-btn {
       position: relative;
-    }
-
-    .back-link {
+      left: 40px;
+      top: 30px;
       display: inline-flex;
       align-items: center;
-      text-decoration: none;
+      gap: 8px;
+      padding: 10px 18px;
+      background: #ffffff;
+      border: 1px solid #e2e8f0;
+      border-radius: 8px;
       color: #0077b5;
-      font-size: 16px;
-      font-weight: 500;
-      margin-bottom: 20px;
-      transition: color 0.3s ease;
+      font-weight: 600;
+      font-size: 15px;
+      text-decoration: none;
+      transition: all 0.25s ease;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.04);
+      z-index: 100;
     }
 
-    .back-link i {
-      margin-right: 8px;
+    .back-btn:hover {
+      background: #0077b5;
+      color: #ffffff;
+      box-shadow: 0 6px 18px rgba(0,119,181,0.15);
+      transform: translateY(-2px);
     }
 
-    .back-link:hover {
-      color: #005582;
+    .back-btn svg {
+      width: 16px;
+      height: 16px;
+      stroke-width: 2;
+    }
+
+    .wrap {
+      max-width: 1100px;
+      margin: 80px auto 36px;
+      padding: 28px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.7), rgba(250,250,250,0.9));
+      border-radius: 16px;
+      box-shadow: var(--shadow);
+    }
+
+    header {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 18px;
+    }
+
+    .logo {
+      width: 56px;
+      height: 56px;
+      border-radius: 10px;
+      background: var(--muted);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 700;
+      color: var(--text);
     }
 
     h1 {
-      text-align: center;
-      color: #222;
-      font-size: 28px;
-      margin-bottom: 10px;
+      font-size: 20px;
+      margin: 0;
     }
 
-    .contact-line {
-      text-align: center;
-      color: #666;
-      font-size: 16px;
-      margin-bottom: 30px;
+    p.lead {
+      margin: 6px 0 0;
+      color: #475569;
+      font-size: 13px;
     }
 
-    .contact-item {
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 18px;
+      margin-top: 22px;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: var(--radius);
+      padding: 12px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      box-shadow: 0 6px 18px rgba(15,23,42,0.04);
+      transition: transform .18s ease, box-shadow .18s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 14px 36px rgba(15,23,42,0.07);
+    }
+
+    .thumb {
+      width: 100%;
+      height: 180px;
+      background: var(--muted);
+      border-radius: 10px;
       display: flex;
       align-items: center;
-      padding: 15px 0;
-      border-bottom: 1px solid #eee;
+      justify-content: center;
+      overflow: hidden;
+      cursor: pointer;
+      position: relative;
     }
 
-    .contact-item i {
-      color: #0077b5;
-      font-size: 24px;
-      width: 35px;
+    .thumb img {
+      width: 250px;
+      height: 204px;
+      opacity: 1.0;
+      filter: brightness(1.15) contrast(1.1);
+      transition: transform 0.3s ease, filter 0.3s ease;
     }
 
-    .contact-item a {
-      color: #0077b5;
-      text-decoration: none;
-      font-size: 18px;
-      margin-left: 10px;
-      word-break: break-all;
+    .thumb:hover img {
+      transform: scale(1.05);
+      filter: brightness(1.3) contrast(1.2);
     }
 
-    .contact-item a:hover {
-      text-decoration: underline;
+    .caption {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 13px;
+      color: #334155;
     }
 
-    @media (max-width: 600px) {
-      .contact-container {
-        margin: 40px 20px;
-        padding: 30px;
-      }
+    .caption .title {
+      font-weight: 600;
+    }
+
+    .small {
+      font-size: 12px;
+      color: #64748b;
+    }
+
+    .lightbox {
+      position: fixed;
+      inset: 0;
+      background: rgba(2,6,23,0.6);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      padding: 28px;
+      z-index: 1000;
+    }
+
+    .lightbox.open {
+      display: flex;
+    }
+
+    iframe {
+      width: 90vw;
+      height: 90vh;
+      border: none;
+      border-radius: 10px;
+      box-shadow: 0 24px 60px rgba(2,6,23,0.6);
+      background: var(--card);
+    }
+
+    .close-btn {
+      position: fixed;
+      right: 28px;
+      top: 28px;
+      background: var(--card);
+      border-radius: 10px;
+      padding: 8px 10px;
+      box-shadow: var(--shadow);
+      cursor: pointer;
+    }
+
+    footer {
+      margin-top: 20px;
+      text-align: center;
+      color: #6b7280;
+      font-size: 13px;
     }
   </style>
 </head>
 <body>
-   <div class="contact-container">
-    <a href="index.html" class="back-link"><i class="fas fa-arrow-left"></i> Back to Portfolio</a>
-    </div>
+
+  <!-- Back Button outside the certification container -->
+  <a href="index.html" class="back-btn">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+    </svg>
+    Back to Portfolio
+  </a>
+
   <main class="wrap">
     <header>
-      <div class="logo">PDF</div>
+      
       <div>
-        <h1>Certification PDFs</h1>
-        <p class="lead">A clean gallery to view PDF certifications. Click any tile to open the PDF.</p>
+        <h1>Certification</h1>
+        
       </div>
     </header>
 
     <section class="grid">
       <article class="card">
-        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Generative AI for Product Managers.pdf" aria-label="View Certification: Generative AI for Product Managers">
+        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Generative AI for Product Managers.pdf">
           <img src="docs/1.png" alt="LinkedIn Thumbnail">
         </button>
         <div class="caption"><div class="title">Generative AI for Product Managers</div><div class="small">2025</div></div>
       </article>
 
       <article class="card">
-        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Model Context Protocol MCP HandsOn with Agentic AI.pdf" aria-label="View Certification: MCP Hands-On with Agentic AI">
+        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Model Context Protocol MCP HandsOn with Agentic AI.pdf">
           <img src="docs/2.png" alt="LinkedIn Thumbnail">
         </button>
         <div class="caption"><div class="title">MCP Hands-On with Agentic AI</div><div class="small">2025</div></div>
       </article>
 
       <article class="card">
-        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Vibe Code Your First AI App with Lovable and n8n No Code Required.pdf" aria-label="View Certification: Code Your First AI App">
+        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Vibe Code Your First AI App with Lovable and n8n No Code Required.pdf">
           <img src="docs/3.png" alt="LinkedIn Thumbnail">
         </button>
         <div class="caption"><div class="title">Code Your First AI App</div><div class="small">2025</div></div>
       </article>
 
       <article class="card">
-        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Vibe Coding with ChatGPT Build Your Own AI Assistant No Code Required.pdf" aria-label="View Certification: Build Your Own AI Assistant">
+        <button class="thumb" data-pdf="docs/CertificateOfCompletion_Vibe Coding with ChatGPT Build Your Own AI Assistant No Code Required.pdf">
           <img src="docs/4.png" alt="LinkedIn Thumbnail">
         </button>
         <div class="caption"><div class="title">Build Your Own AI Assistant</div><div class="small">2025</div></div>
@@ -165,9 +259,9 @@
       Place your certification PDFs in a <code>pdfs/</code> folder and the LinkedIn logo in <code>images/linkedin.png</code>.
     </footer>
 
-    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true" aria-hidden="true">
-      <button id="close" class="close-btn" aria-label="Close viewer">Close</button>
-      <iframe id="pdf-frame" title="Certification PDF Viewer"></iframe>
+    <div id="lightbox" class="lightbox">
+      <button id="close" class="close-btn">Close</button>
+      <iframe id="pdf-frame"></iframe>
     </div>
   </main>
 
@@ -181,18 +275,18 @@
       function openPDF(src){
         pdfFrame.src = src;
         lightbox.classList.add('open');
-        lightbox.setAttribute('aria-hidden','false');
         closeBtn.focus();
       }
       function closePDF(){
         lightbox.classList.remove('open');
-        lightbox.setAttribute('aria-hidden','true');
         pdfFrame.src = '';
       }
 
       thumbs.forEach(btn=>{
         btn.addEventListener('click',()=>openPDF(btn.getAttribute('data-pdf')));
-        btn.addEventListener('keydown',e=>{if(e.key==='Enter'||e.key===' '){e.preventDefault();btn.click();}});
+        btn.addEventListener('keydown',e=>{
+          if(e.key==='Enter'||e.key===' '){e.preventDefault();btn.click();}
+        });
       });
 
       closeBtn.addEventListener('click',closePDF);
