--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         <i class="fas fa-certificate"></i>
         <h3>Certifications</h3>
         <p>Verified credentials in Product Management and Agile frameworks.</p>
-        <a href="Certifications.html" class="cta-buttons"><i class="fas fa-eye"></i> View</a>
+        <a href="certifications.html" class="cta-buttons"><i class="fas fa-eye"></i> View</a>
       </div>
 
       <div class="download-card">
